course detail page and more

--- a/theme/courses.html
+++ b/theme/courses.html
@@ -148,7 +148,7 @@
                                         <div class="card-body">IT 313</div>
                                     </div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <a class="small text-white stretched-link" href="courseDetails.html">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
