--- a/theme/index.html
+++ b/theme/index.html
@@ -39,7 +39,7 @@
                     aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="#!">Settings</a></li>
-                    <li><a class="dropdown-item" href="#!">Profile</a></li>
+                    <li><a class="dropdown-item" href="profile.html">Profile</a></li>
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
