--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="#profile">
                     <i class="fas fa-user fa-fw"></i> Profile <!-- Link directly to the profile page -->
                 </a>
-                <a class="nav-link" href="login.html">
+                <a class="nav-link" href="#login">
                     Login <!-- Link directly to the profile page -->
                 </a>
 
@@ -59,46 +59,8 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
-                        <div class="sb-sidenav-menu-heading">Interface</div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
-                            aria-expanded="false" aria-controls="collapsePages">
-                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                            Pages
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
-                        <div class="collapse" id="collapsePages" aria-labelledby="headingTwo"
-                            data-bs-parent="#sidenavAccordion">
-                            <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                                    data-bs-target="#pagesCollapseAuth" aria-expanded="false"
-                                    aria-controls="pagesCollapseAuth">
-                                    Authentication
-                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                                </a>
-                                <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne"
-                                    data-bs-parent="#sidenavAccordionPages">
-                                    <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="login.html">Login</a>
-                                        <a class="nav-link" href="register.html">Register</a>
-                                        <a class="nav-link" href="password.html">Forgot Password</a>
-                                    </nav>
-                                </div>
-                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                                    data-bs-target="#pagesCollapseError" aria-expanded="false"
-                                    aria-controls="pagesCollapseError">
-                                    Error
-                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                                </a>
-                                <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne"
-                                    data-bs-parent="#sidenavAccordionPages">
-                                    <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="401.html">401 Page</a>
-                                        <a class="nav-link" href="404.html">404 Page</a>
-                                        <a class="nav-link" href="500.html">500 Page</a>
-                                    </nav>
-                                </div>
-                            </nav>
-                        </div>
+                       
+                        
                         <div class="sb-sidenav-menu-heading">Addons</div>
                         <a class="nav-link" href="#courses">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
@@ -127,6 +89,9 @@
                 <section id="students" data-load="vtpl/students.html"></section>
                 <section id="profile" data-load="vtpl/profile.html"></section>
                 <section id="studentCourses" data-load="studentCourses.html"></section>
+                <section id="courseDetails" data-load="courseDetails.html"></section>
+                <section id="login" data-load="login.html"></section>
+                <section id="register" data-load="register.html"></section>
 
             </main>
 
@@ -171,17 +136,10 @@
             onReady: function () { }
         });
         app.route({
-            view: "courseDetail",
-            load: function (params) {
-                // Load the course detail page based on the course name or ID from the URL
-                return "courseDetail.html?course=" + params.course;
-            },
+            view: "courseDetails",
+            load:"courseDetails.html",
             onCreate: function () { },
             onReady: function () { }
-        });
-        $(document).on('click', '.course-link', function () {
-            var courseName = $(this).data('course-name'); // or course ID if you prefer
-            app.navigate("courseDetail", { course: courseName });
         });
         app.route({
             view: "students",
@@ -198,6 +156,18 @@
         app.route({
             view: "studentCourses",
             load: "studentCourses.html",
+            onCreate: function () { },
+            onReady: function () { }
+        });
+        app.route({
+            view: "login",
+            load: "login.html",
+            onCreate: function () { },
+            onReady: function () { }
+        });
+        app.route({
+            view: "register",
+            load: "register.html",
             onCreate: function () { },
             onReady: function () { }
         });
