--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <div id="layoutSidenav_content">
             <main id="spapp" role="main">
                 <section id="home" data-load="home.html"></section>
-                <section id="courses" data-load="vtpl/courses.html"></section>
-                <section id="students" data-load="vtpl/students.html"></section>
-                <section id="profile" data-load="vtpl/profile.html"></section>
+                <section id="courses" data-load="courses.html"></section>
+                <section id="students" data-load="students.html"></section>
+                <section id="profile" data-load="profile.html"></section>
                 <section id="studentCourses" data-load="studentCourses.html"></section>
                 <section id="courseDetails" data-load="courseDetails.html"></section>
                 <section id="login" data-load="login.html"></section>
